@@ -18,6 +18,10 @@ sox-12.17.4
   o Updated config.sub to detect latest supported OS's.
   o Fabrizio Gennari added support for reading and writing
     MP3 files using the external libraries libmad and libmp3lame.
+  o Jens Henrik Goebbert sent in several bugfixes for integer overflows
+    in the compand effect.
+  o Dan Dickerman sent in patches for integer overflows in the resample
+    effect.
 
 sox-12.17.3
 -----------
